tests/positive/rule4_factory.safe
-- Test: rule4_factory
-- Description: Factory pattern returning non-null access values.
--   The allocator always returns a non-null access value, so the
--   caller can safely dereference without additional checks.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.5.p103a:520dc0d4
-- Expected: ACCEPT

package safe_Factory

   type sensor_Data is record
      id    : natural;
      value : integer;


   type sensor_Ptr is not null access sensor_Data;

   --  Create_Sensor: allocates a new Sensor_Data.
   --  The allocator returns a not-null value by construction.
   function create_Sensor (id : natural;
                           initial_Value : integer) returns sensor_Ptr

      return new ((id = id, value = initial_Value) as sensor_Data);


   --  Read_Sensor: dereferences the factory-created pointer.
   --  The return type Sensor_Ptr is not null access, so
   --  dereference is always safe.
   function read_Sensor (S : sensor_Ptr) returns integer

      return S.value;



