tests/negative/neg_rule4_moved.safe
-- Test: neg_rule4_moved
-- Description: Dereference of an access value after it has been moved.
--   After the move, the source variable is null and cannot be dereferenced.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96c:0b45de01
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Expected: REJECT use_after_move

package moved_Deref_Test

   type data is record
      value : integer;


   type data_Ptr is access data;

   --  Use_After_Move: dereferences Source after it has been moved to Target.
   function use_After_Move
      Source : data_Ptr = new ((value = 42) as data);
      Target : data_Ptr = null;
      v      : integer;

      Target = Source;
      --  Source is now null (moved).
      v = Source.value;  -- ERROR: Source has been moved (is null)



